--- a/values.yaml
+++ b/values.yaml
@@ -1,54 +1,107 @@
-global:
-  redisUrl: "redis://redis:6379"
-  playwrightMicroserviceUrl: "http://playwright-service:3000"
+# Default values for ..
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
 
-api:
-  replicaCount: 1
-  image:
-    repository: your-registry/firecrawl-api
-    tag: latest
-  port: 3002
-  numWorkersPerQueue: 1
+replicaCount: 1
 
-worker:
-  replicaCount: 1
-  image:
-    repository: your-registry/firecrawl-worker
-    tag: latest
-  numWorkersPerQueue: 1
+image:
+  repository: nginx
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "1.0.0"
 
-playwrightService:
-  replicaCount: 1
-  image:
-    repository: your-registry/firecrawl-playwright-service
-    tag: latest
-  port: 3000
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
 
-redis:
-  image:
-    repository: redis
-    tag: alpine
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Automatically mount a ServiceAccount's API credentials?
+  automount: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
 
-environment:
-  useDbAuthentication: ""
-  openaiApiKey: ""
-  openaiBaseUrl: ""
-  modelName: "gpt-4o"
-  slackWebhookUrl: ""
-  llamaparseApiKey: ""
-  logtailKey: ""
-  bullAuthKey: ""
-  testApiKey: ""
-  posthogApiKey: ""
-  posthogHost: ""
-  supabaseAnonToken: ""
-  supabaseUrl: ""
-  supabaseServiceToken: ""
-  scrapingBeeApiKey: ""
-  host: "0.0.0.0"
-  selfHostedWebhookUrl: ""
-  loggingLevel: ""
-  proxyServer: ""
-  proxyUsername: ""
-  proxyPassword: ""
-  blockMedia: ""
+podAnnotations: {}
+podLabels: {}
+
+podSecurityContext: {}
+  # fsGroup: 2000
+
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
+
+service:
+  type: ClusterIP
+  port: 80
+
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
+resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
+
+livenessProbe:
+  httpGet:
+    path: /
+    port: http
+readinessProbe:
+  httpGet:
+    path: /
+    port: http
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+# Additional volumes on the output Deployment definition.
+volumes: []
+# - name: foo
+#   secret:
+#     secretName: mysecret
+#     optional: false
+
+# Additional volumeMounts on the output Deployment definition.
+volumeMounts: []
+# - name: foo
+#   mountPath: "/etc/foo"
+#   readOnly: true
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
